@@ -1,3 +1,8 @@
+2019-03-02  Johannes Pfau  <johannespfau@gmail.com>
+
+	* src/std/digest/murmurhash.d: PR d/89177: Backport from upstream.
+	Fixes unaligned data access (PR d/89177).
+
 2019-02-19  Bernd Edlinger  <bernd.edlinger@hotmail.de>
 
 	* src/Makefile.am: Avoid the -D option which is not available
